# fastapi-ml

./: MSFT.joblib  README.md  build.yml  delete.yml  deploy.yml  docker-compose.yml  pyproject.toml
backend/: backend.dockerfile
backend/app/: .env  .gitignore  README.md  pyproject.toml  tests-start.sh
backend/app/api/: main.py
backend/app/app/: main.py
backend/app/app/api/routes/: heartbeat.py  predictions.py  router.py
backend/app/app/core/: config.py  event_handlers.py
backend/app/app/machine_learning/: model.py
backend/app/app/routers/: predictions.py
backend/app/app/schemas/: payload.py
backend/app/app/tests/: conftest.py
backend/app/app/tests/test_api/: test_heartbeat.py
backend/app/scripts/: test.sh
inventory/: local
kubernetes-templates/: fastapi-ml-deployment.yml  fastapi-ml-service.yml
scripts/: test.sh
vars/local/: main.yml
