[tool.poetry]
name = "fastapi-ml"
version = "0.1.0"
description = "Operational dependencies."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.7"
docker = "4.2.2"
ansible = "2.9.2"
openshift = "0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
