[tool.poetry]
name = "fastapi-ml"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.58.1"
gunicorn = "^20.0.4"
uvicorn = "^0.11.5"
fbprophet = "^0.6"
joblib = "^0.16.0"
pandas = "^1.0.5"
plotly = "^4.8.2"
yfinance = "^0.1.54"
loguru = "^0.4.1"
scikit-learn = "^0.22.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"
requests= "^2.22.0"
flake8 = "^3.7.9"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

