[tool.poetry]
name = "fastapi-ml"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.58.1"
gunicorn = "^20.0.4"
uvicorn = "^0.11.5"
fbprophet = "^0.6"
joblib = "^1.1.1"
pandas = "^1.0.5"
plotly = "^4.8.2"
yfinance = "^0.1.54"
loguru = "^0.4.1"
scikit-learn = "^0.22.1"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

